--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -341,7 +341,7 @@
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
-  <img style="height: 200px; width: 200px;" src="/assets/pic.jpeg">
+  <img style="height: 200px; width: 200px;" src="assets/pic.jpeg">
 
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
